<resources>
    <string name="app_name">FragmentsTabs</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="tab_pokemon">Pokemon</string>
    <string name="tab_star_wars">Star Wars</string>

    <string name="bulbasaur">Bulbasaur</string>
    <string name="charmander">Charmander</string>
    <string name="pikachu">Pikachu</string>
    <string name="squirtle">Squirtle</string>

    <string name="bb8">BB-8</string>
    <string name="bb9e">BB-9E</string>
    <string name="c3po">C-3PO</string>
    <string name="r2d2">R2-D2</string>
</resources>
